--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "php": ">=5.3.2",
         "symfony/framework-bundle": "~2.3",
         "symfony/form": "~2.3",
-        "symfony/security-bundle": "~2.3"
+        "symfony/security-bundle": "~2.3",
+        "knplabs/knp-paginator-bundle": "dev-master"
     },
     "require-dev": {
         "twig/twig": "~1.5",
@@ -25,7 +26,9 @@
         "symfony/validator": "~2.1"
     },
     "autoload": {
-        "psr-0": { "Darles\\Bundle\\ForumBundle": "" }
+        "psr-0": {
+            "Darles\\Bundle\\ForumBundle": ""
+        }
     },
     "target-dir": "Darles/Bundle/ForumBundle"
 }
