--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project name="kimba.lt" default="build">
- <target name="build" depends="prepare,lint,phploc,phpcpd" />
+ <target name="build" depends="prepare,lint,phploc,phpcpd,phpcs" />
 
  <target name="clean" description="Cleanup build artifacts">
   <delete dir="${basedir}/build/api" includeemptydirs="true" quiet="true" />
@@ -37,6 +37,17 @@
    <arg path="${basedir}" />
   </exec>
  </target>
+
+ <target name="phpcs"
+         description="Find coding standard violations using PHP_CodeSniffer creating a log file for the continuous integration server">
+  <exec executable="phpcs" output="/dev/null">
+   <arg value="--report=checkstyle" />
+   <arg value="--report-file=${basedir}/build/logs/checkstyle.xml" />
+   <arg value="--standard=Symfony2" />
+   <arg path="${basedir}" />
+  </exec>
+ </target>
+
 
  <target name="phpcpd" description="Find duplicate code using PHPCPD">
   <exec executable="phpcpd">
